--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
     <title>Chris Zuis</title>
 </head>
-<body> 
-    <a href="my_resume.pdf">My Resume</a>
+<body>
+    <div id="particles-js">
+        <a href="my_resume.pdf">My Resume</a>
+    </div>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
 </body>
