--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <head>
     <title>Chris Zuis</title>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 </head>
 <body>
-    <div id="particles-js">
-        <a href="my_resume.pdf">My Resume</a>
+    <div id="particles-js"></div>
+
+    <div class="outer">
+        <div class="middle">
+            <div class="inner">
+                <h1>Chris Zuis</h1>
+                <ul>
+                    <li><a href="http://github.com/cczeus"><img src="github.png"></a></li>
+                </ul>
+            </div>
+        </div>
     </div>
+
     <script src="particles.js"></script>
     <script src="app.js"></script>
 </body>
