Finished home page

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
 <body>
     <div id="particles-js"></div>
 
-    <div class="outer">
+    <div class="home">
         <div class="middle">
             <div class="inner">
                 <h1>Chris Zuis</h1>
-                <ul>
-                    <li><a href="http://github.com/cczeus"><img src="github.png"></a></li>
-                </ul>
+                <p>Computer Science Undergraduate at University of Pittsburgh</p>
+                <div class="table">
+                    <ul>
+                        <li><a href="my_resume.pdf"><img src="resume.png"></a></li>
+                        <li><a href="http://github.com/cczeus"><img src="github.png"></a></li>
+                        <li><a href="https://www.linkedin.com/in/chriszuis/"><img src="linkedin.png"></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
