Starting multi-pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div id="particles-js"></div>
 
-    <div class="home">
+    <div class="home page">
         <div class="middle">
             <div class="inner">
                 <h1>Chris Zuis</h1>
@@ -19,8 +19,12 @@
                         <li><a href="https://www.linkedin.com/in/chriszuis/"><img src="linkedin.png"></a></li>
                     </ul>
                 </div>
+                <img src="arrow.png">
             </div>
         </div>
+    </div>
+    <div class="about">
+        <h1>Hi</h1>
     </div>
 
     <script src="particles.js"></script>
