--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <div id="particles-js"></div>
 
     <div class="home page">
-        <div class="middle">
-            <div class="inner">
-                <h1>Chris Zuis</h1>
-                <p>Computer Science Undergraduate at University of Pittsburgh</p>
-                <div class="table">
-                    <ul>
-                        <li><a href="my_resume.pdf"><img src="resume.png"></a></li>
-                        <li><a href="http://github.com/cczeus"><img src="github.png"></a></li>
-                        <li><a href="https://www.linkedin.com/in/chriszuis/"><img src="linkedin.png"></a></li>
-                    </ul>
-                </div>
-                <img src="arrow.png">
-            </div>
+        <h1>Chris Zuis</h1>
+        <p>Computer Science Undergraduate at University of Pittsburgh</p>
+        <div class="table">
+            <ul>
+                <li><a href="my_resume.pdf"><img src="resume.png"></a></li>
+                <li><a href="http://github.com/cczeus"><img src="github.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/chriszuis/"><img src="linkedin.png"></a></li>
+            </ul>
+        </div>
+        <img src="arrow.png">
+    </div>
+    <div class="about page">
+        <div class="content">
+            <h3>About Me</h3>
+            <p>Testing 1 2 3</p>
         </div>
     </div>
 
