--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         </div>
     </div>
 
+    <div class="projects page">
+        <div class="content">
+            <h3>Projects</h3>
+        </div>
+    </div>
+
     <script src="particles.js"></script>
     <script src="app.js"></script>
 </body>
