--- a/index.html
+++ b/index.html
@@ -3,35 +3,86 @@
     <title>Chris Zuis</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
-<body>
-    <div id="particles-js"></div>
-
-    <div class="home page">
-        <h1>Chris Zuis</h1>
-        <p>Computer Science Undergraduate at University of Pittsburgh</p>
-        <div class="table">
-            <ul>
-                <li><a href="my_resume.pdf"><img src="resume.png"></a></li>
-                <li><a href="http://github.com/cczeus"><img src="github.png"></a></li>
-                <li><a href="https://www.linkedin.com/in/chriszuis/"><img src="linkedin.png"></a></li>
-            </ul>
-        </div>
-        <img src="arrow.png">
-    </div>
-    <div class="about page">
-        <div class="content">
-            <h3>About Me</h3>
-            <p>Testing 1 2 3</p>
+<body style="background-color: grey;">
+    <!--<div id="particles-js"></div>-->
+    <div class="page">
+        <div class="outer">
+            <div class="inner">
+                <div class="home">
+                    <h1>Chris Zuis</h1>
+                    <h3>Computer Science Undergraduate at University of Pittsburgh</h3>
+                    <ul>
+                        <li><a href="my_resume.pdf"><img src="resume.png"></a>
+                        <li><a href="http://github.com/cczeus"><img src="github.png"></a>
+                        <li><a href="https://www.linkedin.com/in/chriszuis/"><img src="linkedin.png"></a>
+                    </ul>
+                    <img src="arrow.png">
+                </div>
+            </div>
         </div>
     </div>
-
-    <div class="projects page">
-        <div class="content">
-            <h3>Projects</h3>
+    <div class="page">
+        <div class="outer">
+            <div class="inner">
+                <div class="content">
+                    <h2>About Me</h2>
+                    <p>Testing 1 2 3 This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. </p>
+                </div>
+            </div>
         </div>
     </div>
-
+    <div class="page">
+        <div class="outer">
+            <div class="inner">
+                <div class="experience content">
+                    <h2>Experience</h2>
+                    <h3>Junior Full Stack Developer – Duxbury Systems Inc.</h3>
+                    <p><i>June 2015 – Present</i></p>
+                    <ul>
+                        <li><p>Worked as Frontend, Backend, Database, and DevOps developer for new projects in the initial development and deployment phases.</p></li>
+                        <li><p>Designed and deployed internal website for creating and managing employee timesheets.</p></li>
+                        <li><p>Developed online order form to automate the process of customers purchasing updates to their software.</p></li>
+                        <li><p>Updated and maintained a web based administrative control panel that was used to manage user accounts.</p></li>
+                        <li><p>Technologies Used: PHP, HTML/CSS, MySQL, Apache, Git, VMWare, and Bash.</p></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="page">
+        <div class="outer">
+            <div class="inner">
+                <div class="projects content">
+                    <h2>Projects</h2>
+                    <div class="project">
+                        <h3>nurf.gg</h3>
+                    </div><!--
+                    --><div class="project">
+                        <h3>Minesweeper AI</h3>
+                    </div><!--
+                    --><div class="project">
+                        <h3>Couch Potato</h3>
+                    </div><!--
+                    --><div class="project">
+                        <h3>Project Euler</h3>
+                        <img src="euler.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="page">
+        <div class="outer">
+            <div class="inner">
+                <div class="education content">
+                    <h3>Education</h3>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="particles.js"></script>
     <script src="app.js"></script>
 </body>
