--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body style="background-color: grey;">
-    <!--<div id="particles-js"></div>-->
+    <div id="particles-js"></div>
     <div class="page">
         <div class="outer">
             <div class="inner">
