--- a/index.html
+++ b/index.html
@@ -1,88 +1,102 @@
 <!DOCTYPE html>
 <head>
     <title>Chris Zuis</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
-<body style="background-color: grey;">
+<body>
     <div id="particles-js"></div>
-    <div class="page">
-        <div class="outer">
-            <div class="inner">
-                <div class="home">
-                    <h1>Chris Zuis</h1>
-                    <h3>Computer Science Undergraduate at University of Pittsburgh</h3>
-                    <ul>
-                        <li><a href="my_resume.pdf"><img src="resume.png"></a>
-                        <li><a href="http://github.com/cczeus"><img src="github.png"></a>
-                        <li><a href="https://www.linkedin.com/in/chriszuis/"><img src="linkedin.png"></a>
-                    </ul>
-                    <img src="arrow.png">
-                </div>
+    <div class="page" id="home">
+        <div class="content">
+            <h1>Chris Zuis</h1>
+            <h3>Computer Science Undergraduate at University of Pittsburgh</h3>
+            <ul>
+                <li><a href="my_resume.pdf"><img src="img/resume.png"></a>
+                <li><a href="http://github.com/cczeus"><img src="img/github.png"></a>
+                <li><a href="https://www.linkedin.com/in/chriszuis/"><img src="img/linkedin.png"></a>
+            </ul>
+            <div class="button"><img id="home-button" class="arrow" src="img/arrow.png"></div>
+        </div>
+    </div>
+    <div class="page" id="about">
+        <div class="content">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pretium eget nisl et lacinia. Proin tincidunt scelerisque massa, vel ultrices augue vestibulum vitae. Etiam ligula risus, tincidunt eget purus id, venenatis pharetra mauris. Aenean scelerisque mattis sapien et fringilla. Curabitur eget eros luctus, varius elit in, dictum tortor. Fusce laoreet venenatis ligula, a mattis leo pulvinar non. Fusce bibendum justo sed turpis fringilla, non scelerisque tortor placerat. Donec consectetur mattis ligula. Suspendisse dignissim felis orci, sit amet euismod lectus vulputate sed. Nunc malesuada neque nec tortor ullamcorper ullamcorper. Pellentesque nisl turpis, sollicitudin a lacus ac, semper euismod lectus. Phasellus sed sem vel dolor placerat rhoncus. Phasellus et metus tincidunt, imperdiet dui quis, bibendum nulla. Praesent viverra lorem nisl, in pretium erat cursus nec. </p>
+            <div class="button"><img id="about-button" class="arrow" src="img/arrow.png"></div>
+        </div>
+    </div>
+    <div class="page" id="experience">
+        <div class="content">
+            <h2>Experience</h2>
+            <h3>Junior Full Stack Developer – Duxbury Systems Inc.</h3>
+            <p class="date">June 2015 – Present</p>
+            <ul>
+                <li><p>Worked as Frontend, Backend, Database, and DevOps developer for new projects in the initial development and deployment phases.</p></li>
+                <li><p>Designed and deployed internal website for creating and managing employee timesheets.</p></li>
+                <li><p>Developed online order form to automate the process of customers purchasing updates to their software.</p></li>
+                <li><p>Updated and maintained a web based administrative control panel that was used to manage user accounts.</p></li>
+                <li><p>Technologies Used: PHP, HTML/CSS, MySQL, Apache, Git, VMWare, and Bash.</p></li>
+            </ul>
+            <div class="button"><img id="experience-button" class="arrow" src="img/arrow.png"></div>
+        </div>
+    </div>
+    <div class="page" id="projects">
+        <div class="content">
+            <h2>Projects</h2>
+            <div class="project">
+                <img src="img/nurf.png">
+                <h3>nurf.gg</h3>
+            </div><!--
+            --><div class="project">
+                <img src="img/minesweeper.png">
+                <h3>Minesweeper AI</h3>
+            </div><!--
+            --><div class="project">
+                <img src="img/couchpotato.png">
+                <h3>Couch Potato</h3>
+            </div><!--
+            --><div class="project">
+                <img src="img/euler.png">
+                <h3>Project Euler</h3>
+            </div>
+            <div class="button"><img id="projects-button" class="arrow" src="img/arrow.png"></div>
+        </div>
+    </div>
+    <div class="page" id="education">
+        <div class="content">
+            <h2>Education</h2>
+            <div class="school">
+                <h3>University of Pittsburgh</h3>
+                <p class="date">Pittsburgh, PA &nbsp January 2017 - Present (Expected April 2019)</p>
+                <p>Majoring in Computer Science with focus on Artificial Intelligence, Minoring in Statistics</p>
+                <p>Relevant Classes:</p>
+                <ul>
+                    <li><p>Computer Organization and Assembly Language</p></li>
+                    <li><p>Intro to Systems Software</p></li>
+                    <li><p>Algorithms and Implementation</p></li>
+                    <li><p>Intermediate Web Design and Development</p></li>
+                    <li><p>Formal Methods in Computer Science</p></li>
+                </ul>
+            </div>
+            <div class="school">
+                <h3>Rochester Institute of Technology</h3>
+                <p class="date">Rochester, NY &nbsp August 2015 – December 2016</p>
+                <p>Majored in Software Engineering</p>
+                <p>Relevant Classes:</p>
+                <ul>
+                    <li><p>Discrete Mathematics for Computing</p></li>
+                    <li><p>Mathematical Models of Software Engineering</p></li>
+                    <li><p>Personal Software Engineering</p></li>
+                    <li><p>Intro to Software Engineering</p></li>
+                    <li><p>CS Theory</p></li>
+                    <li><p>Data Structures</p></li>
+                </ul>
             </div>
         </div>
     </div>
-    <div class="page">
-        <div class="outer">
-            <div class="inner">
-                <div class="content">
-                    <h2>About Me</h2>
-                    <p>Testing 1 2 3 This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. This is supposed to be really long text. </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="page">
-        <div class="outer">
-            <div class="inner">
-                <div class="experience content">
-                    <h2>Experience</h2>
-                    <h3>Junior Full Stack Developer – Duxbury Systems Inc.</h3>
-                    <p><i>June 2015 – Present</i></p>
-                    <ul>
-                        <li><p>Worked as Frontend, Backend, Database, and DevOps developer for new projects in the initial development and deployment phases.</p></li>
-                        <li><p>Designed and deployed internal website for creating and managing employee timesheets.</p></li>
-                        <li><p>Developed online order form to automate the process of customers purchasing updates to their software.</p></li>
-                        <li><p>Updated and maintained a web based administrative control panel that was used to manage user accounts.</p></li>
-                        <li><p>Technologies Used: PHP, HTML/CSS, MySQL, Apache, Git, VMWare, and Bash.</p></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="page">
-        <div class="outer">
-            <div class="inner">
-                <div class="projects content">
-                    <h2>Projects</h2>
-                    <div class="project">
-                        <h3>nurf.gg</h3>
-                    </div><!--
-                    --><div class="project">
-                        <h3>Minesweeper AI</h3>
-                    </div><!--
-                    --><div class="project">
-                        <h3>Couch Potato</h3>
-                    </div><!--
-                    --><div class="project">
-                        <h3>Project Euler</h3>
-                        <img src="euler.png">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="page">
-        <div class="outer">
-            <div class="inner">
-                <div class="education content">
-                    <h3>Education</h3>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="particles.js"></script>
-    <script src="app.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
 </body>
