Removed About Me (unfinished)

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <div class="button"><img id="home-button" class="arrow" src="img/arrow.png"></div>
         </div>
     </div>
-    <div class="page" id="about">
+    <!-- <div class="page" id="about">
         <div class="content">
             <h2>About Me</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pretium eget nisl et lacinia. Proin tincidunt scelerisque massa, vel ultrices augue vestibulum vitae. Etiam ligula risus, tincidunt eget purus id, venenatis pharetra mauris. Aenean scelerisque mattis sapien et fringilla. Curabitur eget eros luctus, varius elit in, dictum tortor. Fusce laoreet venenatis ligula, a mattis leo pulvinar non. Fusce bibendum justo sed turpis fringilla, non scelerisque tortor placerat. Donec consectetur mattis ligula. Suspendisse dignissim felis orci, sit amet euismod lectus vulputate sed. Nunc malesuada neque nec tortor ullamcorper ullamcorper. Pellentesque nisl turpis, sollicitudin a lacus ac, semper euismod lectus. Phasellus sed sem vel dolor placerat rhoncus. Phasellus et metus tincidunt, imperdiet dui quis, bibendum nulla. Praesent viverra lorem nisl, in pretium erat cursus nec. </p>
             <div class="button"><img id="about-button" class="arrow" src="img/arrow.png"></div>
         </div>
-    </div>
+    </div> -->
     <div class="page" id="experience">
         <div class="content">
             <h2>Experience</h2>
