--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
     <div class="page" id="experience">
         <div class="content">
             <h2>Experience</h2>
+            <h3>Summer Games Intern – Booz Allen Hamilton</h3>
+            <p class="date">June 2018 – August 2018</p>
+            <ul>
+                <li><p>Designed and developed the frontend for a rapid, high-risk, android application prototype within the span of 10 weeks</p></li>
+                <li><p>Assisted in the development of the backend design, database design, facial recognition implementation, and connection between an android phone and Raspberry Pi</p></li>
+                <li><p>Both facilitated and participated in daily scrum meetings and weekly stakeholder presentations</p></li>
+            </ul>
+            <br><br>
             <h3>Junior Full Stack Developer – Duxbury Systems Inc.</h3>
             <p class="date">June 2015 – Present</p>
             <ul>
@@ -73,6 +81,9 @@
                 <p>Majoring in Computer Science with focus on Artificial Intelligence, Minoring in Statistics</p>
                 <p>Relevant Classes:</p>
                 <ul>
+                    <li><p>Intro to Machine Learning</p></li>
+                    <li><p>Intro to Computer Vision</p></li>
+                    <li><p>Intro to Artificial Intelligence</p></li>
                     <li><p>Computer Organization and Assembly Language</p></li>
                     <li><p>Intro to Systems Software</p></li>
                     <li><p>Algorithms and Implementation</p></li>
